se actualiza readme

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
             </div>
         </div>
-        <h2>Realizado por José Mauricio Romero <a href="">github</a></h2>
+        <h2>Realizado por José Mauricio Romero <a href="https://github.com/Maitomanito">github</a></h2>
     </div>
     <script src="./script.js"></script>
 </body>
